Update README.md
增加使用说明